# lan-chat

./: README.md  biome.jsonc  index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md
src/: App.tsx  app.tsx  global.css  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  attachment.rs  diagnostics.rs  message.rs  mod.rs  network.rs  settings.rs  user.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/models/: attachment.rs  message.rs  mod.rs  peer.rs  settings.rs  user.rs
src-tauri/src/network/: discovery.rs  local_address.rs  mod.rs  peer_connection.rs
src-tauri/src/services/: message_service.rs  mod.rs  peer_service.rs  settings_service.rs  user_service.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/app/layout/: app-header.tsx  app-layout.tsx  app-sidebar.tsx  index.ts
src/app/providers/: app-providers.tsx  index.tsx  query-provider.tsx  theme-provider.tsx
src/features/chat/: index.ts
src/features/chat/components/: chat-view.tsx  message-input.tsx  message-item.tsx  message-list.tsx
src/features/chat/utils/: format-time.ts
src/shared/hooks/: use-tauri-events.ts
src/shared/stores/: index.ts  message-store.ts  network-store.ts  settings-store.ts  user-store.ts
src/shared/types/: attachment.ts  common.ts  diagnostics.ts  index.ts  message.ts  network.ts  settings.ts  user.ts
src/styles/: debug-panel.css  retro-ui.css
(+13 files in other folders)
